--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@
 *.exe
 *.out
 *.app
+.vscode
 
 ### CLion ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
